# llm-playground

./: .gitignore  README.md  pyproject.toml  rag_docs.py
.cursor/rules/: documentation.mdc
java/: .gitignore  ASTNode.java  CalculatorREPL.java  Lexer.java  Parser.java  README.md  TestRender.java  java-calc-mcp  pom.xml  run-tests.sh  test_expressions.txt
java/src/main/java/: ASTNode.java  CalculatorREPL.java  Interpreter.java  JavaCalcMCP.java  JavaCalcMCPHybrid.java  Lexer.java  Parser.java
java/src/test/java/: ASTNodeTest.java  InterpreterTest.java  LexerTest.java  ParserTest.java  RenderTest.java
node/: README.md  ast.js  astRenderer.js  calc_mcp.js  interpreter.js  lexer.js  node-calc-mcp  package-lock.json  package.json  parser.js  repl.js  test.js
python/: .gitignore  Makefile  README.md  py_bootstrap_prefs.md  pyproject.toml
python/calculator/: Makefile  calculator.py  pyproject.toml
python/calculator/tests/: test_calculator.py
python/src/: __init__.py  main.py
python/tests/: test_main.py
ruby/: Gemfile  README.md  Rakefile  ast.rb  ast_renderer.rb  calc-mcp  calc_mcp.rb  calculator.rb  interpreter.rb  lexer.rb  parser.rb  repl.rb  test_mcp_server.rb  test_render.rb
ruby/lib/: calculator.rb
ruby/spec/: calculator_spec.rb  interpreter_spec.rb  lexer_spec.rb  parser_spec.rb
